feat(devcontainer): update Dockerfile and configuration
- Change working directory to /usr/src/builder
- Install additional packages: pandoc, texlive-xetex, texlive-fonts-recommended, texlive-plain-generic
- Update service and workspace folder in devcontainer.json
- Modify docker-compose.yml to reflect new service name and volume path
- Add .gitignore for temporary files
- Create resume template in LaTeX format
- Add resume markdown file with professional summary and experience
- Include generated resume PDF

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,10 @@
 FROM python:3-bookworm
 
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/builder
 COPY requirements.txt ./ 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt \
+    && apt-get update \
+    && apt-get install -y pandoc texlive-xetex texlive-fonts-recommended texlive-plain-generic \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
